# llm-quality

./: .gitignore  README.md  pyproject.toml
notebooks/: classification.ipynb  extraction.ipynb  text_generation.ipynb
notebooks/llm_adaptors/: _azure_gpt.py  _bedrock.py  base.py  models.py
